# IPyTrace

./: LICENSE  README.md  pyproject.toml
ipytrace/: __init__.py  magic.py
